[gd_scene load_steps=6 format=3 uid="uid://c03vrnwqhunni"]

[ext_resource type="Script" uid="uid://bynf0mq22haqw" path="res://scripts/mopping.gd" id="1_o76vt"]
[ext_resource type="Texture2D" uid="uid://cd5i4my5jenue" path="res://assets/Mopping Assets/FLOOR_SPRITE_3-1.jpg" id="2_wxoop"]
[ext_resource type="Shader" uid="uid://3endyqqcnx4r" path="res://scripts/mopping.gdshader" id="3_qji5k"]
[ext_resource type="Texture2D" uid="uid://c8q3b1hcfcsg8" path="res://assets/Mopping Assets/SPILLED MESS.png" id="4_ftimn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0d33b"]
shader = ExtResource("3_qji5k")

[node name="mopping" type="Node2D"]
script = ExtResource("1_o76vt")

[node name="FloorSprite31" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_wxoop")

[node name="SpilledMess" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0d33b")
position = Vector2(581, 320)
scale = Vector2(5, 5)
texture = ExtResource("4_ftimn")

[node name="PercentLabel" type="Label" parent="."]
visible = false
offset_left = 17.999908
offset_top = 12.999992
offset_right = 77.99991
offset_bottom = 35.999992
scale = Vector2(3.795, 3.795)
text = "Cleaned: 100%"

[node name="sfx" type="AudioStreamPlayer" parent="."]
